[module7-task3]: Fix header and footer alignment

--- a/src/express/static/css/custom.css
+++ b/src/express/static/css/custom.css
@@ -5,9 +5,9 @@
 .footer {
   justify-content: space-between;
   max-width: 1000px;
-  width: auto;
   margin-left: 0;
   margin-right: 0;
+  align-self: center;
 }
 
 .form__validation-error {
